fixed bottom whitespace

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
   /* classes */
-  body::-webkit-scrollbar{
+  html::-webkit-scrollbar{
     transition: all .5s;
     z-index: 13;
     width: calc(.2vw + 6px);
@@ -7,14 +7,14 @@
     height: 100vh;
     display: block;
   }
-  body::-webkit-scrollbar-thumb{
+  html::-webkit-scrollbar-thumb{
     transition: all .5s;
     width: calc(.2vw + 6px);
     background: rgba(73, 109, 137, .5);
     border-radius: 15%;
     height: 25px;
   }
-  body::-webkit-scrollbar-thumb:hover{
+  html::-webkit-scrollbar-thumb:hover{
     background: rgba(73, 109, 137, 1);
     border-radius: 15%;
     height: 25px;
@@ -31,7 +31,8 @@
     padding: none;
     margin: none;
     overflow: visible;
-    overflow-y: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
   @font-face {
     font-family: 'Material Icons';
@@ -696,12 +697,10 @@ ul {
 /** landing (page 0) */
 #content0 {
   /** background-color: rgba(170, 57, 57, 1); */
-  background-color: rgba(39, 65, 89, 1);
-  background-size: 250% 250%;
   font-size: 5vw;
   color: rgba(225, 234, 234, 1);
   overflow: hidden;
-  width: 98vw;
+  width: 100vw;
   left: 0;
   margin-left: 0;
 }
@@ -879,6 +878,8 @@ a{
   background: linear-gradient(0deg, rgba(100,70,107,1) 0%, rgba(233, 239, 244, 1) 100%);
   margin-left: 0;
   left: 0%;
+  margin-bottom: 0;
+  padding-bottom: 0;
 }
 .big{
   display: block;
@@ -1009,16 +1010,20 @@ a{
       transition: all 0.06s;
       height: auto;
       min-height: 110%;
-      width: 120%;
+      width: 130%;
       top: -10%;
       left: -30%;
     }
     html, body {
       overflow: hidden;
+      overflow-x: hidden;
       overflow-y: scroll;
-      width: 99.5vw;
+      width: 97.5vw;
     }
     body::-webkit-scrollbar, html::-webkit-scrollbar{
       display: none;
+    }
+    .contentLast{
+      margin-bottom: 0;
     }
 }
